# dmc-tradingview-bridge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-release.yml
configs/: bridge.yaml
deploy/: bridge.env.example  bridge.service  install.sh  nginx.conf.example
docs/: tradingview_alert_templates.md  tv_webhook_integration_spec.md
sisie_bridge/: __init__.py  check_config.py  main.py  signal_normalizer.py
sisie_bridge/core/: config.py
sisie_bridge/core/exchanges/: base.py  bitunix_adapter.py  ccxt_adapter.py
sisie_bridge/core/models/: order.py  signal.py
sisie_bridge/core/risk/: manager.py
sisie_bridge/state/: __init__.py  manager.py  reconciler.py
sisie_bridge/webhook/: __init__.py  dashboard.html  server.py
