[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisie-strategy-bridge"
version = "1.0.0"
description = "TradingView Webhook → Multi-Exchange Trade Execution Bridge"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0",
]

[project.scripts]
sisie-bridge = "sisie_bridge.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sisie_bridge = ["webhook/dashboard.html"]
